# equity-research-copilot

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.example  pyproject.toml
backend/app/: citation_definitions.py  config.py  llm.py  main.py
backend/app/agents/: __init__.py  cost.py  graph.py  prompts.py  state.py  streaming.py
backend/app/agents/nodes/: __init__.py  analyzers.py  fetchers.py  indexer.py  planner.py  synthesizer.py
backend/app/prompts/: chat.md  planner.md  synthesizer.md
backend/app/prompts/analyzers/: catalysts.md  competition.md  financial_health.md  growth.md  macro_context.md  risks.md  sentiment_momentum.md  valuation.md
backend/app/rag/: __init__.py  chunker.py  embeddings.py  parser.py  store.py
backend/app/tools/: __init__.py  edgar.py  news.py  newsapi.py  technicals.py  yfinance_tool.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  CitationSheet.tsx  IngestSearchPanel.tsx  PriceChart.tsx  ReportView.tsx  TickerInput.tsx
frontend/src/data/: sp500.json
frontend/src/lib/: api.ts  utils.ts
