[project]
name = "backend"
version = "0.1.0"
description = "Equity Research Copilot — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-aws>=1.4.7",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.46.0",
    "voyageai>=0.3.7",
    "yfinance>=1.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modernize syntax)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long — formatter handles this
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
